# tinker2

./: README.md  craco.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
src/: App.js  App.jsx  LoadingIndicator.js  Panel.js  Playground.js  Playground.jsx  Settings.js  Settings.jsx  Sidebar.js  Sidebar.jsx  SplashScreen.jsx  StatusBar.js  StatusBar.jsx  Tinker.js  Tinker.jsx  executor.js  helpers.js  index.css  index.js  index.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/buttons/: ActionButton.js  ActionButton.jsx  Button.js
src/config/: app.js  editor-options.js
src/contexts/: LicenseContext.js  LicenseContext.jsx  PlaygroundContext.js  PlaygroundContext.jsx  SettingsContext.js  SettingsContext.jsx  SnippetsContext.js
src/hooks/: useLicense.js  usePersistState.js  useSettings.js  useSnippet.js  useSnippets.js
src/icons/: Dupplicate.jsx  Share.jsx
src/panels/: Panel.js  Panel.jsx  PreferencesPanel.js  PreferencesPanel.jsx  ServerForm.js  ServerForm.jsx  ServersPanel.js  ServersPanel.jsx  SnippetsPanel.js  SnippetsPanel.jsx
src/playground/: Input.js  Input.jsx  Output.js  Output.jsx  PlayButton.jsx
src/services/: DatabaseService.js  RemoteServerService.js  random-quotes.js  validate-license-key.js
src/utils/: registerPHPSnippetLanguage.js
