[package]
name = "app"
version = "0.2.11"
description = "A Tauri App"
authors = [ "bangnokia" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { git = "https://github.com/tauri-apps/tauri", features = ["cli", "dialog-open", "fs-create-dir", "fs-read-dir", "fs-read-text-file", "fs-write-file", "http-all", "path-all", "shell-all", "updater"], version="1.0.0-beta.8" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
